[gd_scene load_steps=4 format=3 uid="uid://b0s6svqg7yb4u"]

[ext_resource type="Script" uid="uid://4tctaams27re" path="res://scripts/enemy.gd" id="1_7p1mj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8tegq"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7p1mj"]
radius = 5.0

[node name="enemy1" type="CharacterBody2D"]
collision_mask = 4
script = ExtResource("1_7p1mj")
metadata/enemy = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8tegq")
debug_color = Color(0.917822, 0.275562, 0.192968, 0.42)

[node name="dir_timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7p1mj")

[connection signal="timeout" from="dir_timer" to="." method="_on_dir_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
